--- a/root.tex
+++ b/root.tex
@@ -87,7 +87,7 @@ New Zealand\\
 \altchapter{\bf{Abstract}}
 API documentation presents both a problem and an opportunity for API usability. REST APIs provide interconnectivity between applications over HTTP. Documentation of a REST API is a key information source for API client developers. Most REST APIs are documented using a manual approach, which can be time consuming and error-prone. REST API developers need to efficiently document their APIs with the qualities that make the API usable. In this research, I focused on the topic of automated REST API documentation to satisfy this need.
 
-In this thesis, I present and evaluate of a novel technique to solve REST API documentaiton requirements. I present a set of REST API documentation requirements by studying the existing literature and the current industry practice. From this study, I observed that REST APIs evolve frequently, but used a manual or bespoke approach for generating and maintaining their documentation. I present a reusable technique with a prototype implementation to automate the REST API documentation process with executable API usage examples. The technique involves the interception of example REST API calls using an HTTP proxy server to auto-generate an accurate and updated REST API documentation. I present an industrial evaluation of the proposed technique based on a period of eighteen months of production use. From this study, I found that it was feasible to leverage API test code to automatically generate an always-updated REST API documentation for evolving REST APIs with usage examples. To evaluate the impact of usage examples on REST API client developers, I performed a controlled study with experienced REST API developers. From this case study, I found that REST API client developers faced patterns of obstacles using REST APIs that can be reduced by including API usage examples in the API documentation, as suggested in the proposed technique.
+In this thesis, I present and evaluate of a novel technique to solve REST API documentation requirements. I present a set of REST API documentation requirements by studying the existing literature and the current industry practice. From this study, I observed that REST APIs evolve frequently, but used a manual or bespoke approach for generating and maintaining their documentation. I present a reusable technique with a prototype implementation to automate the REST API documentation process with executable API usage examples. The technique involves the interception of example REST API calls using an HTTP proxy server to auto-generate an accurate and updated REST API documentation. I present an industrial evaluation of the proposed technique based on a period of eighteen months of production use. From this study, I found that it was feasible to leverage API test code to automatically generate an always-updated REST API documentation for evolving REST APIs with usage examples. To evaluate the impact of usage examples on REST API client developers, I performed a controlled study with experienced REST API developers. From this case study, I found that REST API client developers faced patterns of obstacles using REST APIs that can be reduced by including API usage examples in the API documentation, as suggested in the proposed technique.
 
 The findings of this research can be used as a guideline by practitioners to automatically generate REST API documentation with usage examples. Researchers can extend the novel concept of using interception to automatically document API usage examples for other forms of APIs.
 
@@ -144,15 +144,15 @@ I am grateful to Cisco for allowing me to pursue this research alongside my job.
 \label{chapter:conclusion}
 
 
-In this thesis, I presented a set of five primary research objectives related to the topic of REST API documentation. I have addressed the first research objective, RO1, of finding the gap between the current industry practices and existing research on REST API documentation by performing a case study in my first research sub-project. I started by reviewing the existing literature on Web API evolution. From the existing empirical research on Web API evolution, I found that researchers have focused on profiling SOAP based web services to identify the common change patterns. They suggested focusing on the maintenance efforts related to Web API evolution because of its lingering effects. In the existing literature, I found several techniques proposed by researchers related to supporting the evolution of SOAP APIs. Analyzing the existing literature on tool support for Web API evolution, I found tools developed by researchers that primarly rely on custom formatted API specification documents that require a manual effort to generate and maintain. In this sub-project, I have also analyzed the evolution of nine Web APIs in production, selected based on their industry, popularity, maturity, and source code access to understand the current state of practice around Web API versioning, documentation, and change comminucation patterns. By comparing and contrasting the findings from the literature review and the industry practices, I observed that it was important to carry out further research to find techniques to support versioning, documentation, and change communication needs for evolving REST APIs.
+In this thesis, I presented a set of five primary research objectives related to the topic of REST API documentation. I have addressed the first research objective, RO1, of finding the gap between the current industry practices and existing research on REST API documentation by performing a case study in my first research sub-project. I started by reviewing the existing literature on Web API evolution. From the existing empirical research on Web API evolution, I found that researchers have focused on profiling SOAP based web services to identify the common change patterns. They suggested focusing on the maintenance efforts related to Web API evolution because of its lingering effects. In the existing literature, I found several techniques proposed by researchers related to supporting the evolution of SOAP APIs. Analyzing the existing literature on tool support for Web API evolution, I found tools developed by researchers that primarily rely on custom formatted API specification documents that require a manual effort to generate and maintain. In this sub-project, I have also analyzed the evolution of nine Web APIs in production, selected based on their industry, popularity, maturity, and source code access, to understand the current state of practice around Web API versioning, documentation, and change communication patterns. By comparing and contrasting the findings from the literature review and the industry practices, I observed that it was important to carry out further research to find techniques to support versioning, documentation, and change communication needs for evolving REST APIs.
 
-I addressed RO2, finding RESAPI T documentation requirements, in my second research sub-project. I started by analyzing the existing literature on API usability to summarize a list of general API documentation requirements as derived by other researchers. Then, I analyzed the existing literature on REST API documentation. Based on these two analyses, I derived the following list of documentation requirements specific for evolving REST APIs: automated, example based, executable, version aware, customizable, reusable, and collaborative. These requirements are used as a background work to address my subsequent research objectives.
+I addressed RO2, finding REST API documentation requirements, in my second research sub-project. I started by analyzing the existing literature on API usability to summarize a list of general API documentation requirements as derived by other researchers. Then, I analyzed the existing literature on REST API documentation. Based on these two analyses, I derived the following list of documentation requirements specific for evolving REST APIs: automated, example based, executable, version aware, customizable, reusable, and collaborative. These requirements are used as a background work to address my subsequent research objectives.
 
-RO3, the primary objective of finding a new technique to satisfy the documentation requirements of evolving REST APIs, is addressed in my third and fourth sub-projects. I observed that most existing techniques for REST API documentation relied on custom API specification formats as an input. This approach requires manual effort to generate and maintain the API specification as a separate artifact with the API as the API evolves and fails to satisfy the identified REST API documentation requirements. I proposed a novel technique called SpyREST to automatically intercept and transform example REST API calls into usable API documentation following the identified requirements. An HTTP proxy server is used to collect data from example API calls. The collected data is then synthesized to automatically infer the structural elements of the API such as the version, API resource, HTTP verb, API action, query parameters, request and response body, HTTP headers. In addition to the structure, executable API examples are automatically constructed with realistic data. I developed a prototype tool to demonstrate a concrete implementation of the proposed concept. In a preliminary case study with three evolving REST APIs, I have shown that it is possible to use the proposed technique to generate more a accurate documentation of REST APIs compared to their official documentation that are  manually maintained.
+RO3, the primary objective of finding a new technique to satisfy the documentation requirements of evolving REST APIs, is addressed in my third and fourth sub-projects. I observed that most existing techniques for REST API documentation relied on custom API specification formats as an input. This approach requires manual effort to generate and maintain the API specification as a separate artifact with the API as the API evolves and fails to satisfy the identified REST API documentation requirements. I proposed a novel technique called SpyREST to automatically intercept and transform example REST API calls into usable API documentation following the identified requirements. An HTTP proxy server is used to collect data from example API calls. The collected data is then synthesized to automatically infer the structural elements of the API such as the version, API resource, HTTP verb, API action, query parameters, request and response body, and HTTP headers. In addition to the structure, executable API examples are automatically re-constructed with realistic data from the recorded API calls. I developed a prototype tool to demonstrate a concrete implementation of the proposed concept. In a preliminary case study with three evolving REST APIs, I have shown that it is possible to use the proposed technique to generate a more accurate documentation of REST APIs compared to their official documentation that are  manually maintained.
 
-I addressed RO4, an evaluation of the proposed technique from the perspective of REST API developers, in my fourth sub-project using a case study. I presented the proposed technique and the prototype tool to a team of software engineers at Cisco when we were in the process of selecting a documentation method for a suit of new REST APIs to be built. I discussed the selection process behind choosing SpyREST as documentation tool for this project. In this case study, I discussed how the proposed technique of using test code to drive REST API documentation has been leveraged in Cisco to create and maintain an always-updated and accurate documentation for an evolving REST API in production for a period of eighteen months. I gathered feedback from the stakeholders including the API developers, QA engineers, project managers, and customer support engineers to evaluate the merits and shortcomings of the proposed techqniue based on their production use. The evaluation results show that it is feasible to use API test code to generate and maintain REST API documentation for an evolving API with the identified REST API documentation requirements. From this evaluation, I also found that different stakeholders are able to establish a fast and continuous feedback loop about the API and its documentation while developing the API features when the API documentation is auto updated from executable code. Additionally, from this evaluation, I found a list of limitations of the proposed technique related to the lack of support for using version control features for custom edited API documentation content and automatically generated changelogs showing the differences between API elements of different API versions. Future research can be carried out to address these limitations.
+I addressed RO4, an evaluation of the proposed technique from the perspective of REST API developers, in my fourth sub-project using an industrial case study. I presented the proposed technique and the prototype tool to a team of software engineers at Cisco when we were in the process of selecting a documentation method for a suite of new REST APIs to be built. I discussed the selection process behind choosing SpyREST as documentation tool for this project. In this case study, I discussed how the proposed technique of using test code to drive REST API documentation has been leveraged in Cisco to create and maintain an always-updated and accurate documentation for an evolving REST API in production for a period of eighteen months. I gathered feedback from the stakeholders including the API developers, QA engineers, project managers, and customer support engineers to evaluate the merits and shortcomings of the proposed technique based on their production use. The evaluation results show that it is feasible to use API test code to generate and maintain REST API documentation for an evolving API with the identified REST API documentation requirements. From this evaluation, I also found that different stakeholders are able to establish a fast and continuous feedback loop about the API and its documentation while developing the API features when the API documentation is auto updated from executable code. Additionally, from this evaluation, I found a list of limitations of the proposed technique related to the lack of support for using version control features for custom edited API documentation content and automatically generated changelogs showing the differences between API elements of different API versions. Future research can be carried out to address these limitations.
 
-My last research objective, RO5, to evaluate the impact of the proposed technique on REST API client developers, was addressed in my fifth sub-project. I performed a controlled study with 26 professional software engineers with prior REST API experience. The participants were asked to perform tasks using a REST API following its accopmpanying documentation. I enhanced an existing API documentation with usage examples leveraging the API's test code. This enhancement mimics the outcome of the proposed technique but does not use the proposed tool. Participants were mapped into two groups. One of the groups used the original API documentation and the other group used the enhanced documentation. I provided a web based API explorer so that participants could only focus on the required API inputs instead of writing a full API client application to perform the tasks. I observed that participants using the original API documentation faced similar patterns of obstacles involving the use of correct data types, data formats, HTTP headers, and request body. Participants using the enhanced documentation were able to reduce these obstacles to peform API tasks with a higher success rate, requiring less trial API calls and effort, and a higher satisfaction rating. This provides empirical evidence that the proposed technique has a positive impact on the REST API client developers. I also derived a list of recommentations related to the content of usage examples for REST API documentation that can be used by practitioners as a guideline to prioritize their documentation efforts. From this study, I also observed that participants used more trial API calls for API tasks that involve multiple dependent API calls even while using the enhanced documentation. Future research is needed to generate API documentation with examples for complex API usage scenarios to reduce this obstacle.
+My last research objective, RO5, to evaluate the impact of the proposed technique on REST API client developers, was addressed in my fifth sub-project. I performed a controlled study with 26 professional software engineers with prior REST API experience. The participants were asked to perform tasks using a REST API following its accompanying documentation. I enhanced an existing API documentation with usage examples leveraging the API's test code. This enhancement mimics the outcome of the proposed technique but does not use the proposed tool. Participants were mapped into two groups. One of the groups used the original API documentation and the other group used the enhanced documentation. I provided a web based API explorer so that participants could only focus on the required API inputs instead of writing a full API client application to perform the tasks. I observed that participants using the original API documentation faced similar patterns of obstacles involving the use of correct data types, data formats, HTTP headers, and request body. Participants using the enhanced documentation were able to reduce these obstacles to perform API tasks with a higher success rate, requiring less trial API calls and effort, and a higher satisfaction rating. This provides empirical evidence that the proposed technique has a positive impact on the REST API client developers. I also derived a list of recommendations related to the content of usage examples for REST API documentation that can be used by practitioners as a guideline to prioritize their documentation efforts. From this study, I also observed that participants used more trial API calls for API tasks that involve multiple dependent API calls even while using the enhanced documentation. Future research is needed to generate API documentation with examples for complex API usage scenarios to reduce this obstacle.
 
 In summary, through the sub-projects, I have derived a set of REST API documentation requirements, and proposed a novel technique of using interception to automatically document REST APIs with usage examples from executable code. I have presented evaluations of the proposed technique from the perspectives of both the developers that write the APIs and the developers that use the APIs. Practitioners and researchers can leverage the findings from this thesis to improve the current state of REST API documentation process.
 
